--- a/.nuget/packages.config
+++ b/.nuget/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="JetBrains.Platform.Lib.Microsoft.VisualStudio.Sdk.VsctLib" version="2.0.20140430.0" />
+  <package id="NuGet.CommandLine" version="2.8.6" />
   <package id="Wave" version="1.0.0.0" />
 </packages>
